게시판 기능 구현

--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,19 @@ body{
   margin:0; 
   padding:0;
 }
+
+/* App */
+.isNew{
+  cursor:pointer;
+  text-align: end;
+  padding:50px;
+  font-size: 14px;
+}
+/* New */
 .New{
   padding:20px;
   text-align: center;
   margin:0 auto;
-  border-bottom:1px solid grey;
 }
 
 .New_div{
@@ -37,6 +45,7 @@ body{
 .Category{
   padding:20px;
   display: flex;
+  align-items: center;
   justify-content: center;
   text-align: center;
 }
@@ -54,9 +63,32 @@ body{
   padding:20px;
 }
 
-.Item{
+.List_textnull{
+  text-align: center;
+  font-size: 16px;
+}
+
+table{
   width:100%;
+  text-align: center;
+  margin-bottom:100px;
+}
+thead{
+  font-size: 20px;
+}
+
+td{
+  font-size:16px;
+  color:grey;
+  margin-top:12px;
+}
+
+/*Data Item*/
+.Item{
+
+  width:50%;
   background-color: rgb(247, 247, 247);
+  margin:100px auto;
   padding:15px;
 }
 
@@ -100,4 +132,66 @@ body{
   margin:0 6px 0 0;
   background-color: none;
   cursor: pointer;
+}
+.Item_back{
+  text-align: end;
+  font-size: 14px;
+  cursor:pointer;
+  padding:40px;
+}
+
+/*Paging*/
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+ul.pagination li {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #e2e2e2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+}
+
+ul.pagination li:first-child{
+  border-radius: 5px 0 0 5px;
+}
+
+ul.pagination li:last-child{
+  border-radius: 0 5px 5px 0;
+}
+
+ul.pagination li a {
+  text-decoration: none;
+  color: #337ab7;
+  font-size: 1rem;
+}
+
+ul.pagination li.active a {
+  color: white;
+}
+
+ul.pagination li.active {
+  background-color: #337ab7;
+}
+
+ul.pagination li a:hover,
+ul.pagination li a.active {
+  color: blue;
+}
+
+.page-selection {
+  width: 48px;
+  height: 30px;
+  color: #337ab7;
 }
